--- a/index.html
+++ b/index.html
@@ -3,7 +3,72 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tour plan</title>
+    <title>Best Tour Plan - Hotel Booking</title>
   </head>
-  <body></body>
+
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header-top">
+          <a href="#" class="logo">
+            <img
+              src="img/1.header/horizontal-logo.svg"
+              alt="Logo: Best Tour Plan"
+              class="logo__image"
+            />
+          </a>
+          <form action="#" class="search">
+            <input
+              type="text"
+              class="search__input"
+              placeholder="Search Location"
+            />
+            <button class="button search__button">
+              <img src="img/1.header/search-icon.svg" alt="Icon: search" />
+            </button>
+          </form>
+          <a href="#" class="user">
+            <img
+              src="img/1.header/avatar.jpg"
+              alt="Avatar: Natan"
+              class="user__avatar"
+            />
+            <span class="user__name">Natan</span>
+          </a>
+          <!-- /.user -->
+        </div>
+        <!-- /.header-top -->
+        <div class="header-menu">
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#" class="nav__link">All Deals</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Hotels</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Activities</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Hotel Day Packages</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Restaurants</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Events</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Rodrigues</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <!-- /.header-menu -->
+      </div>
+      <!-- /.container -->
+    </header>
+    <!-- /.header -->
+  </body>
 </html>
