--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;600;700&family=Nunito:wght@400;600;800&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
 
   <body>
@@ -27,7 +28,7 @@
               class="search__input"
               placeholder="Search Location"
             />
-            <button class="button search__button">
+            <button class="search__button">
               <img src="img/1.header/search-icon.svg" alt="Icon: search" />
             </button>
           </form>
