Updated index.html, added style for menu

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
           <!-- /.user -->
         </div>
         <!-- /.header-top -->
-        <div class="header-menu">
+      </div>
+      <!-- /.container -->
+      <div class="header-menu">
+        <div class="container">
           <nav class="nav">
             <ul class="nav__list">
               <li class="nav__item">
@@ -70,9 +73,9 @@
             </ul>
           </nav>
         </div>
-        <!-- /.header-menu -->
+        <!-- /.container -->
       </div>
-      <!-- /.container -->
+      <!-- /.header-menu -->
     </header>
     <!-- /.header -->
   </body>
