Fixed index.html, _header.sass: added "navbar"

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   </head>
 
   <body>
-    <header class="header">
+    <header class="navbar">
       <div class="container">
-        <div class="header-top">
+        <div class="navbar-top">
           <a href="#" class="logo">
             <img
               src="img/1.header/horizontal-logo.svg"
@@ -42,10 +42,10 @@
           </a>
           <!-- /.user -->
         </div>
-        <!-- /.header-top -->
+        <!-- /.navbar-top -->
       </div>
       <!-- /.container -->
-      <div class="header-menu">
+      <div class="navbar-menu">
         <div class="container">
           <nav class="nav">
             <ul class="nav__list">
@@ -75,7 +75,7 @@
         </div>
         <!-- /.container -->
       </div>
-      <!-- /.header-menu -->
+      <!-- /.navbar-menu -->
     </header>
     <!-- /.header -->
   </body>
