--- a/index.html
+++ b/index.html
@@ -41,34 +41,39 @@
             <span class="user__name">Natan</span>
           </a>
           <!-- /.user -->
+          <a href="#" class="menu-button navbar-top__menu-button">
+            <span class="menu-button__line"></span>
+            <span class="menu-button__line"></span>
+            <span class="menu-button__line"></span>
+          </a>
         </div>
         <!-- /.navbar-top -->
       </div>
       <!-- /.container -->
-      <div class="navbar-menu">
+      <div class="navbar-bottom">
         <div class="container">
-          <nav class="nav">
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a href="#" class="nav__link">All Deals</a>
+          <nav class="navbar-menu">
+            <ul class="navbar-menu__list">
+              <li class="navbar-menu__item">
+                <a href="#" class="navbar-menu__link">All Deals</a>
               </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link">Hotels</a>
+              <li class="navbar-menu__item">
+                <a href="#" class="navbar-menu__link">Hotels</a>
               </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link">Activities</a>
+              <li class="navbar-menu__item">
+                <a href="#" class="navbar-menu__link">Activities</a>
               </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link">Hotel Day Packages</a>
+              <li class="navbar-menu__item">
+                <a href="#" class="navbar-menu__link">Hotel Day Packages</a>
               </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link">Restaurants</a>
+              <li class="navbar-menu__item">
+                <a href="#" class="navbar-menu__link">Restaurants</a>
               </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link">Events</a>
+              <li class="navbar-menu__item">
+                <a href="#" class="navbar-menu__link">Events</a>
               </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link">Rodrigues</a>
+              <li class="navbar-menu__item">
+                <a href="#" class="navbar-menu__link">Rodrigues</a>
               </li>
             </ul>
           </nav>
