Added breadcrump to index.html; Added bc style

--- a/index.html
+++ b/index.html
@@ -83,5 +83,20 @@
       <!-- /.navbar-menu -->
     </header>
     <!-- /.header -->
+    <nav class="breadcrump">
+      <div class="container">
+        <ul class="breadcrump-list">
+          <li class="breadcrump-list__item">
+            <a href="#" class="breadcrump-list__link">Home</a>
+          </li>
+          <li class="breadcrump-list__item">
+            <a href="#" class="breadcrump-list__link">Flesh Offers</a>
+          </li>
+          <li class="breadcrump-list__item">Grand Hilton Hotel</li>
+        </ul>
+      </div>
+      <!-- /.container -->
+    </nav>
+    <!-- /.breadcrump -->
   </body>
 </html>
