Added "hotel", style for hotel

--- a/index.html
+++ b/index.html
@@ -98,5 +98,35 @@
       <!-- /.container -->
     </nav>
     <!-- /.breadcrump -->
+    <section class="hotel">
+      <div class="container">
+        <div class="hotel-info">
+          <div class="hotel-info__text">
+            <div class="stars">
+              <img src="img/2.hotel/Star.svg" alt="star" />
+              <img src="img/2.hotel/Star.svg" alt="star" />
+              <img src="img/2.hotel/Star.svg" alt="star" />
+              <img src="img/2.hotel/Star.svg" alt="star" />
+              <img src="img/2.hotel/Star.svg" alt="star" />
+            </div>
+            <h1 class="name">GRAND HILTON HOTEL</h1>
+            <span class="offer">Flash Offer</span>
+            <p class="description">
+              Half-Board/ All Inclusive + Complimentary Activities + Child Stays
+              Free
+            </p>
+          </div>
+          <!-- /.hotel-info__text -->
+          <div class="hotel-rating">
+            <span class="hotel-rating__text">User Rattings</span>
+            <span class="hotel-rating__counter">4.5/5</span>
+          </div>
+          <!-- /.hotel-raiting -->
+        </div>
+        <!-- /.hotel-info -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.hotel -->
   </body>
 </html>
