Added sprite.svg, updated header, hotel style

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
               placeholder="Search Location"
             />
             <button class="search__button">
-              <img src="img/1.header/search-icon.svg" alt="Icon: search" />
+              <svg class="icon search__icon">
+                <use xlink:href="img/sprite.svg#search"></use>
+              </svg>
             </button>
           </form>
           <a href="#" class="user">
@@ -103,11 +105,21 @@
         <div class="hotel-info">
           <div class="hotel-info__text">
             <div class="stars">
-              <img src="img/2.hotel/Star.svg" alt="star" />
-              <img src="img/2.hotel/Star.svg" alt="star" />
-              <img src="img/2.hotel/Star.svg" alt="star" />
-              <img src="img/2.hotel/Star.svg" alt="star" />
-              <img src="img/2.hotel/Star.svg" alt="star" />
+              <svg class="icon star">
+                <use xlink:href="img/sprite.svg#star"></use>
+              </svg>
+              <svg class="icon star">
+                <use xlink:href="img/sprite.svg#star"></use>
+              </svg>
+              <svg class="icon star">
+                <use xlink:href="img/sprite.svg#star"></use>
+              </svg>
+              <svg class="icon star">
+                <use xlink:href="img/sprite.svg#star"></use>
+              </svg>
+              <svg class="icon star">
+                <use xlink:href="img/sprite.svg#star"></use>
+              </svg>
             </div>
             <h1 class="name">GRAND HILTON HOTEL</h1>
             <span class="offer">Flash Offer</span>
