Fixed spaces on stars, added margin-right

--- a/index.html
+++ b/index.html
@@ -106,18 +106,14 @@
           <div class="hotel-info__text">
             <div class="stars">
               <svg class="icon star">
-                <use xlink:href="img/sprite.svg#star"></use>
-              </svg>
-              <svg class="icon star">
-                <use xlink:href="img/sprite.svg#star"></use>
-              </svg>
-              <svg class="icon star">
-                <use xlink:href="img/sprite.svg#star"></use>
-              </svg>
-              <svg class="icon star">
-                <use xlink:href="img/sprite.svg#star"></use>
-              </svg>
-              <svg class="icon star">
+                <use xlink:href="img/sprite.svg#star"></use></svg
+              ><svg class="icon star">
+                <use xlink:href="img/sprite.svg#star"></use></svg
+              ><svg class="icon star">
+                <use xlink:href="img/sprite.svg#star"></use></svg
+              ><svg class="icon star">
+                <use xlink:href="img/sprite.svg#star"></use></svg
+              ><svg class="icon star">
                 <use xlink:href="img/sprite.svg#star"></use>
               </svg>
             </div>
