--- a/index.html
+++ b/index.html
@@ -106,14 +106,18 @@
           <div class="hotel-info__text">
             <div class="stars">
               <svg class="icon star">
-                <use xlink:href="img/sprite.svg#star"></use></svg
-              ><svg class="icon star">
-                <use xlink:href="img/sprite.svg#star"></use></svg
-              ><svg class="icon star">
-                <use xlink:href="img/sprite.svg#star"></use></svg
-              ><svg class="icon star">
-                <use xlink:href="img/sprite.svg#star"></use></svg
-              ><svg class="icon star">
+                <use xlink:href="img/sprite.svg#star"></use>
+              </svg>
+              <svg class="icon star">
+                <use xlink:href="img/sprite.svg#star"></use>
+              </svg>
+              <svg class="icon star">
+                <use xlink:href="img/sprite.svg#star"></use>
+              </svg>
+              <svg class="icon star">
+                <use xlink:href="img/sprite.svg#star"></use>
+              </svg>
+              <svg class="icon star">
                 <use xlink:href="img/sprite.svg#star"></use>
               </svg>
             </div>
@@ -127,7 +131,10 @@
           <!-- /.hotel-info__text -->
           <div class="hotel-rating">
             <span class="hotel-rating__text">User Rattings</span>
-            <span class="hotel-rating__counter">4.5/5</span>
+            <div class="hotel-rating__counter">
+              <span class="value hotel-rating__counter__value">4.5</span>
+              <span class="value hotel-rating__counter__max">5</span>
+            </div>
           </div>
           <!-- /.hotel-raiting -->
         </div>
