Added swiper files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;600;700&family=Nunito:wght@400;600;800&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <script src="js/swiper-bundle.min.js" defer></script>
     <script src="js/main.js" defer></script>
   </head>
 
@@ -134,7 +136,7 @@
             <span class="hotel-rating__text">User Rattings</span>
             <div class="hotel-rating__counter">
               <span class="value hotel-rating__counter__value">4.5</span>
-              <span class="value hotel-rating__counter__max">5</span>
+              <span class="value hotel-rating__counter__value__max">5</span>
             </div>
           </div>
           <!-- /.hotel-raiting -->
