--- a/index.html
+++ b/index.html
@@ -142,6 +142,62 @@
           <!-- /.hotel-raiting -->
         </div>
         <!-- /.hotel-info -->
+        <div class="hotel-grid">
+          <div class="slider">
+            <!-- Slider main container -->
+            <div class="swiper-container">
+              <!-- Additional required wrapper -->
+              <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide">
+                  <img src="img/2.hotel/slide.jpg" alt="slide" class="slide" />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="img/2.hotel/slide-2.jpg"
+                    alt="slide"
+                    class="slide"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="img/2.hotel/slide-3.jpg"
+                    alt="slide"
+                    class="slide"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="img/2.hotel/slide-4.jpg"
+                    alt="slide"
+                    class="slide"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="img/2.hotel/slide-5.jpg"
+                    alt="slide"
+                    class="slide"
+                  />
+                </div>
+              </div>
+              <!-- If we need navigation buttons -->
+              <button class="slider-button slider-button__prev">
+                <svg class="icon slider-button__icon_prev">
+                  <use xlink:href="img/sprite.svg#prev"></use>
+                </svg>
+              </button>
+              <button class="slider-button slider-button__next">
+                <svg class="icon slider-button__icon_next">
+                  <use xlink:href="img/sprite.svg#next"></use>
+                </svg>
+              </button>
+            </div>
+            <!-- /.swiper-container -->
+          </div>
+          <!-- /.slider -->
+        </div>
+        <!-- /.hotel-grid -->
       </div>
       <!-- /.container -->
     </section>
