Added booking+map, style for them

--- a/index.html
+++ b/index.html
@@ -196,6 +196,59 @@
             <!-- /.swiper-container -->
           </div>
           <!-- /.slider -->
+          <div class="hotel-wrapper">
+            <div class="booking-card">
+              <div class="booking-card__content">
+                <div class="price">
+                  <span class="price__txt">price starts as</span>
+                  <span class="price__value">$ 8,500</span>
+                  <span class="price__txt">per room / night</span>
+                </div>
+                <div class="properties">
+                  <div class="properties__item">
+                    <svg class="icon properties__icon">
+                      <use xlink:href="img/sprite.svg#guest"></use>
+                    </svg>
+                    <span class="properties__txt">2 x Guests</span>
+                  </div>
+                  <div class="properties__item">
+                    <svg class="icon properties__icon">
+                      <use xlink:href="img/sprite.svg#room"></use>
+                    </svg>
+                    <span class="properties__txt">1 x Room</span>
+                  </div>
+                </div>
+              </div>
+              <!-- /.booking-card__content -->
+              <div class="booking-card__phone">
+                <span>Quick Booking</span>
+                <a href="#" class="number">
+                  <svg class="icon number__icon">
+                    <use xlink:href="img/sprite.svg#phone-call"></use>
+                  </svg>
+                  <span>12100</span>
+                </a>
+              </div>
+              <a href="#" class="button booking-card__button">
+                View Other Options
+              </a>
+            </div>
+            <!-- /.booking-card -->
+            <div class="map">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1922457.0014589757!2d28.773369545541513!3d40.53542274090733!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe964200b7b8e87ea!2sHilton%20Istanbul%20Bosphorus!5e0!3m2!1suk!2sua!4v1600763267120!5m2!1suk!2sua"
+                width="350"
+                height="210"
+                frameborder="0"
+                style="border-radius: 10px"
+                allowfullscreen=""
+                aria-hidden="false"
+                tabindex="0"
+              ></iframe>
+            </div>
+            <!-- /.map -->
+          </div>
+          <!-- /.info -->
         </div>
         <!-- /.hotel-grid -->
       </div>
