--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
               <iframe
                 class="map__item"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1922457.0014589757!2d28.773369545541513!3d40.53542274090733!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe964200b7b8e87ea!2sHilton%20Istanbul%20Bosphorus!5e0!3m2!1suk!2sua!4v1600763267120!5m2!1suk!2sua"
-                width="350"
+                width="100%"
                 height="210"
                 allowfullscreen=""
                 aria-hidden="false"
