--- a/index.html
+++ b/index.html
@@ -249,5 +249,24 @@
       <!-- /.container -->
     </section>
     <!-- /.hotel -->
+    <section class="newsletter">
+      <div class="newsletter__wrapper">
+        <h2 class="newsletter__title">
+          subscribe to our<br />
+          <span class="newsletter__title__strong">newsletter</span>
+        </h2>
+        <!-- /.newsletter__text -->
+        <form action="#" class="subscribe">
+          <input
+            type="text"
+            class="subscribe__input"
+            placeholder="Your email address"
+          />
+          <button class="subscribe__button">Send</button>
+        </form>
+      </div>
+      <!-- /.newsletter__wrapper -->
+    </section>
+    <!-- /.newsletter -->
   </body>
 </html>
