Added "review", style for it

--- a/index.html
+++ b/index.html
@@ -148,59 +148,57 @@
         </div>
         <!-- /.hotel-info -->
         <div class="hotel-grid">
-          <div class="slider">
-            <!-- Slider main container -->
-            <div class="swiper-container">
-              <!-- Additional required wrapper -->
-              <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide">
-                  <img src="img/2.hotel/slide.jpg" alt="slide" class="slide" />
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    src="img/2.hotel/slide-2.jpg"
-                    alt="slide"
-                    class="slide"
-                  />
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    src="img/2.hotel/slide-3.jpg"
-                    alt="slide"
-                    class="slide"
-                  />
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    src="img/2.hotel/slide-4.jpg"
-                    alt="slide"
-                    class="slide"
-                  />
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    src="img/2.hotel/slide-5.jpg"
-                    alt="slide"
-                    class="slide"
-                  />
-                </div>
+          <div class="swiper-container hotel__slider hotel-slider">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  src="img/2.hotel/slide.jpg"
+                  alt="slide"
+                  class="slide hotel-slider__slide"
+                />
               </div>
-              <!-- If we need navigation buttons -->
-              <button class="slider-button slider-button__prev">
-                <svg class="icon slider-button__icon_prev">
-                  <use xlink:href="img/sprite.svg#prev"></use>
-                </svg>
-              </button>
-              <button class="slider-button slider-button__next">
-                <svg class="icon slider-button__icon_next">
-                  <use xlink:href="img/sprite.svg#next"></use>
-                </svg>
-              </button>
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  src="img/2.hotel/slide-2.jpg"
+                  alt="slide"
+                  class="slide hotel-slider__slide"
+                />
+              </div>
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  src="img/2.hotel/slide-3.jpg"
+                  alt="slide"
+                  class="slide hotel-slider__slide"
+                />
+              </div>
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  src="img/2.hotel/slide-4.jpg"
+                  alt="slide"
+                  class="slide hotel-slider__slide"
+                />
+              </div>
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  src="img/2.hotel/slide-5.jpg"
+                  alt="slide"
+                  class="slide hotel-slider__slide"
+                />
+              </div>
             </div>
-            <!-- /.swiper-container -->
+            <!-- If we need navigation buttons -->
+            <button class="hotel-slider__button hotel-slider__button_prev">
+              <svg class="icon hotel-slider__icon_prev">
+                <use xlink:href="img/sprite.svg#prev"></use>
+              </svg>
+            </button>
+            <button class="hotel-slider__button hotel-slider__button_next">
+              <svg class="icon hotel-slider__icon_next">
+                <use xlink:href="img/sprite.svg#next"></use>
+              </svg>
+            </button>
           </div>
-          <!-- /.slider -->
+          <!-- /.swiper-container -->
           <div class="hotel-wrapper">
             <div class="booking-card">
               <div class="booking-card__content">
@@ -268,5 +266,166 @@
       <!-- /.newsletter__wrapper -->
     </section>
     <!-- /.newsletter -->
+    <section class="reviews">
+      <div class="container">
+        <h2 class="reviews__title">What people think about us</h2>
+        <div class="swiper-container reviews-slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="reviews-slider__item">
+                <div class="reviews-slider__profile">
+                  <img
+                    src="img/4.reviews/avatar.jpg"
+                    alt="Photo: Megan Fox"
+                    class="reviews-slider__avatar"
+                  />
+                  <h3 class="reviews-slider__user-name">Megan Fox</h3>
+                  <span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
+                  <div class="rating">
+                    <svg class="icon star">
+                      <use xlink:href="img/sprite.svg#star"></use>
+                    </svg>
+                    <svg class="icon star">
+                      <use xlink:href="img/sprite.svg#star"></use>
+                    </svg>
+                    <svg class="icon star">
+                      <use xlink:href="img/sprite.svg#star"></use>
+                    </svg>
+                    <svg class="icon star">
+                      <use xlink:href="img/sprite.svg#star"></use>
+                    </svg>
+                    <svg class="icon star">
+                      <use xlink:href="img/sprite.svg#star"></use>
+                    </svg>
+                  </div>
+                  <!-- /.rating -->
+                </div>
+                <!-- /.reviews-slider__profile -->
+                <p class="reviews-slider__text">
+                  It was very nice hotel with cleanliness. Staff behavior was
+                  good and polite. They welcome us very well. Issue was only
+                  that Lift was not in working and we were allotted to 3rd floor
+                  and amenities articles were in corner of gallery which were
+                  giving bad feeling. Breakfast was good and support of the
+                  staff was also very nice. Location is not good as per
+                  atmosphere, it is very nearby most of the popular places but
+                  self location in a narrow street is not good. Overall it was a
+                  good experience and could recommend.
+                </p>
+                <!-- /.reviews-slider__text -->
+              </div>
+              <!-- /.reviews-slider__item -->
+            </div>
+            <!-- /.swiper-slide -->
+            <div class="swiper-slide">
+              <div class="reviews-slider__item">
+                <div class="reviews-slider__profile">
+                  <img
+                    src="img/4.reviews/avatar.jpg"
+                    alt="Photo: Megan Fox"
+                    class="reviews-slider__avatar"
+                  />
+                  <h3 class="reviews-slider__user-name">Megan Fox</h3>
+                  <span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
+                  <div class="rating">
+                    <svg class="icon star">
+                      <use xlink:href="img/sprite.svg#star"></use>
+                    </svg>
+                    <svg class="icon star">
+                      <use xlink:href="img/sprite.svg#star"></use>
+                    </svg>
+                    <svg class="icon star">
+                      <use xlink:href="img/sprite.svg#star"></use>
+                    </svg>
+                    <svg class="icon star">
+                      <use xlink:href="img/sprite.svg#star"></use>
+                    </svg>
+                    <svg class="icon star">
+                      <use xlink:href="img/sprite.svg#star"></use>
+                    </svg>
+                  </div>
+                  <!-- /.rating -->
+                </div>
+                <!-- /.reviews-slider__profile -->
+                <p class="reviews-slider__text">
+                  It was very nice hotel with cleanliness. Staff behavior was
+                  good and polite. They welcome us very well. Issue was only
+                  that Lift was not in working and we were allotted to 3rd floor
+                  and amenities articles were in corner of gallery which were
+                  giving bad feeling. Breakfast was good and support of the
+                  staff was also very nice. Location is not good as per
+                  atmosphere, it is very nearby most of the popular places but
+                  self location in a narrow street is not good. Overall it was a
+                  good experience and could recommend.
+                </p>
+                <!-- /.reviews-slider__text -->
+              </div>
+              <!-- /.reviews-slider__item -->
+            </div>
+            <!-- /.swiper-slide -->
+            <div class="swiper-slide">
+              <div class="reviews-slider__item">
+                <div class="reviews-slider__profile">
+                  <img
+                    src="img/4.reviews/avatar.jpg"
+                    alt="Photo: Megan Fox"
+                    class="reviews-slider__avatar"
+                  />
+                  <h3 class="reviews-slider__user-name">Megan Fox</h3>
+                  <span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
+                  <div class="rating">
+                    <svg class="icon star">
+                      <use xlink:href="img/sprite.svg#star"></use>
+                    </svg>
+                    <svg class="icon star">
+                      <use xlink:href="img/sprite.svg#star"></use>
+                    </svg>
+                    <svg class="icon star">
+                      <use xlink:href="img/sprite.svg#star"></use>
+                    </svg>
+                    <svg class="icon star">
+                      <use xlink:href="img/sprite.svg#star"></use>
+                    </svg>
+                    <svg class="icon star">
+                      <use xlink:href="img/sprite.svg#star"></use>
+                    </svg>
+                  </div>
+                  <!-- /.rating -->
+                </div>
+                <!-- /.reviews-slider__profile -->
+                <p class="reviews-slider__text">
+                  It was very nice hotel with cleanliness. Staff behavior was
+                  good and polite. They welcome us very well. Issue was only
+                  that Lift was not in working and we were allotted to 3rd floor
+                  and amenities articles were in corner of gallery which were
+                  giving bad feeling. Breakfast was good and support of the
+                  staff was also very nice. Location is not good as per
+                  atmosphere, it is very nearby most of the popular places but
+                  self location in a narrow street is not good. Overall it was a
+                  good experience and could recommend.
+                </p>
+                <!-- /.reviews-slider__text -->
+              </div>
+              <!-- /.reviews-slider__item -->
+            </div>
+            <!-- /.swiper-slide -->
+          </div>
+          <!-- /.swiper-wrapper -->
+          <button class="reviews-slider__button reviews-slider__button_prev">
+            <svg class="reviews-slider__icon reviews-slider__icon_prev">
+              <use xlink:href="img/sprite.svg#prev"></use>
+            </svg>
+          </button>
+          <button class="reviews-slider__button reviews-slider__button_next">
+            <svg class="reviews-slider__icon reviews-slider__icon_next">
+              <use xlink:href="img/sprite.svg#next"></use>
+            </svg>
+          </button>
+        </div>
+        <!-- /.swiper-container reviews-slider -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.review -->
   </body>
 </html>
