--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
     />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <script
-      src="https://api-maps.yandex.ru/2.1/?apikey=35d05983-f5d8-4fa1-b453-b2e3d0cffc8e&lang=ru_RU"
-      type="text/javascript"
-      defer
-    ></script>
     <script src="js/swiper-bundle.min.js" defer></script>
     <script src="js/main.js" defer></script>
   </head>
@@ -237,7 +232,15 @@
               </a>
             </div>
             <!-- /.booking-card -->
-            <div class="map" id="map"></div>
+            <div class="map">
+              <iframe
+                class="map__item"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.5790052710686!2d-122.41938908482582!3d37.77646847975925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085809c6c8f4459%3A0xb10ed6d9b5050fa5!2sTwitter!5e0!3m2!1sru!2sua!4v1600877597752!5m2!1sru!2sua"
+                allowfullscreen=""
+                aria-hidden="false"
+                tabindex="0"
+              ></iframe>
+            </div>
             <!-- /.map -->
           </div>
           <!-- /.info -->
