Addded parallax effect to newsletter

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/main.css" />
     <script src="js/swiper-bundle.min.js" defer></script>
+    <script
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+      defer
+    ></script>
+    <script src="js/parallax.min.js" defer></script>
     <script src="js/main.js" defer></script>
   </head>
 
@@ -250,7 +255,12 @@
       <!-- /.container -->
     </section>
     <!-- /.hotel -->
-    <section class="newsletter">
+    <section
+      class="newsletter"
+      data-parallax="scroll"
+      data-image-src="img/3.newsletter/background-img.jpg"
+      data-speed="0.5"
+    >
       <div class="newsletter__wrapper">
         <h2 class="newsletter__title">
           subscribe to our<br />
