--- a/index.html
+++ b/index.html
@@ -438,5 +438,39 @@
       <!-- /.container -->
     </section>
     <!-- /.review -->
+    <section class="activities">
+      <div class="container">
+        <h2 class="activities__title">Other activities</h2>
+        <div class="activities__content">
+          <div class="activities__item">
+            <span class="activities__text">The curious corner of chamarel</span>
+            <a href="#" class="activities__button">Book now</a>
+          </div>
+          <!-- /.activities__item -->
+          <div class="activities__item">
+            <span class="activities__text">Gymkhana club golf course</span>
+            <a href="#" class="activities__button">Book now</a>
+          </div>
+          <!-- /.activities__item -->
+          <div class="activities__item">
+            <span class="activities__text"
+              >Tamarind falls hiking trip - full day
+            </span>
+            <a href="#" class="activities__button">Book now</a>
+          </div>
+          <!-- /.activities__item -->
+          <div class="activities__item">
+            <span class="activities__text"
+              >The blue marine discovery quest</span
+            >
+            <a href="#" class="activities__button">Book now</a>
+          </div>
+          <!-- /.activities__item -->
+        </div>
+        <!-- /.activities__content -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.activities -->
   </body>
 </html>
