Fixed packages style

--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
                 alt="Photo: Hotel Blue Haven"
                 class="big-item__img packages__img"
               />
+              <span class="packages__offer">Flash Offer</span>
             </div>
             <div class="content big-item__content packages__content">
               <div class="stars">
@@ -337,6 +338,8 @@
                 alt="Photo: LUX* Belle Mare"
                 class="packages__img"
               />
+
+              <span class="packages__offer">Flash Offer</span>
             </div>
             <div class="content packages__content">
               <h3 class="content__title">LUX* Belle Mare</h3>
@@ -383,6 +386,8 @@
                 alt="Photo: White Palace"
                 class="packages__img"
               />
+
+              <span class="packages__offer">Flash Offer</span>
             </div>
             <div class="content packages__content">
               <h3 class="content__title">White Palace</h3>
@@ -429,6 +434,8 @@
                 alt="Photo: Luxury Place"
                 class="packages__img"
               />
+
+              <span class="packages__offer">Flash Offer</span>
             </div>
             <div class="content packages__content">
               <h3 class="content__title">Luxury Place</h3>
@@ -475,6 +482,8 @@
                 alt="Photo: Hotel Five Star"
                 class="packages__img"
               />
+
+              <span class="packages__offer">Flash Offer</span>
             </div>
             <div class="content packages__content">
               <h3 class="content__title">Hotel Five Star</h3>
